[package]
name = "more-podcasts"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
anyhow = "1"
serde = "1"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
getrandom = { version = "0.2", features = ["js"] }
